# Kwalitec

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DIGITAL_TWIN_PHILOSOPHY.md  LEARNING_EVIDENCE_MODEL.md  LICENSE  MIGRATION_INVESTIGATION_FINDINGS.md  MILESTONE_1_1_CURRICULUM_MODEL_ANALYSIS.md  MILESTONE_1_2_CANONICAL_CURRICULUM_JSON_FORMAT.md  PRODUCT_BLUEPRINT.md  PROJECT_CONTEXT.md  README.md  RELEASE_NOTES_V2.md  ROADMAP_V3.md  STUDENT_DIGITAL_TWIN.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml  render.yaml  requirements.txt  run.py  test_fresh_migration.py  test_migration_instrumentation.py  test_startup_fix.py  wsgi.py
.cursor/: ANTI_PATTERNS.md  BETA_READINESS.md  PROJECT_INDEX.md  RELEASE_CHECKLIST.md
app/: __init__.py  brand_identity.py  cli.py  config.py  extensions.py  static_assets.py  version.py
docs/: ARCHITECTURE_CONSTITUTION.md  ARCHITECTURE_OVERVIEW.md  DEPENDENCY_RULES.md  ENGINEERING_CHARTER.md  PROJECT_HISTORY.md  SYSTEM_CONTEXT.md  TECHNICAL_DEBT_REGISTER.md
instance/: kwalitec.sqlite3.backup  kwalitec.sqlite3.backup.20260710072624  kwalitec.sqlite3.broken
knowledge/: ENGINEERING_STANDARDS.md  GOVERNANCE.md  QUALITY_MANUAL.md  README.md  RELEASE_PLAYBOOK.md  VERSION_1_READINESS.md
migrations/: README  alembic.ini  env.py
prompts/: bugfix.md  feature.md  migration.md  refactor.md  review.md
research/: README.md
scripts/: br004_smoke.py
src/: __init__.py
tests/: conftest.py  perf_v1sp003_harness.py  test_alpha_001_infrastructure.py  test_auth.py  test_behaviour_update_strategy.py  test_bi001_brand_identity.py  test_cli.py  test_config.py  test_console_001_kwalitec_console.py  test_curriculum_engine.py  test_curriculum_engine_v2.py  test_curriculum_importer.py  test_curriculum_integration.py  test_curriculum_load_auto.py  test_curriculum_section_aware.py  test_decision_engine.py  test_digital_twin_domain.py  test_educational_kpi_status.py  test_eip001_educational_state_ownership.py  test_eip002_educational_evidence_authority.py  test_eip003_educational_explainability.py  test_eip005_educational_continuity.py  test_eip006_version1_educational_state_refinement.py  test_evidence_extraction_engine.py  test_evidence_transformation_stage.py  test_evidence_validation_stage.py  test_first_time_experience.py  test_founder_dashboard.py  test_ia001_mission_recommendation_integrity.py  test_ia002_study_plan_state_synchronization.py  test_ia003_student_centred_educational_messaging.py  test_ia004_truthful_learning_progress.py  test_iahf001_study_session_pause.py  test_iahf003_founder_command_centre.py  test_iahf004a_brand_infrastructure.py  (+50 more)
(+3535 files in other folders)
