[project]
name = "kwalitec"
version = "1.0.0"
description = "A disciplined learning system for professional exam preparation."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "app/founder/knowledge_engine/tests",
    "app/founder/capability_archive/tests",
    "app/founder/internal_alpha/tests",
    "app/founder/dashboard/tests",
    "app/founder/operational_state/tests",
    "app/founder/recommendations/tests",
    "app/founder/briefing/tests",
    "app/founder/internal_alpha_workflow/tests",
    "app/automation/tests",
    "tests/certification",
]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.ruff]
target-version = "py311"
exclude = ["migrations/", ".venv/", "venv/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"